# SlamBook2

ch2/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/homework/: CMakeLists.txt  coordinate_transformation_example.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/stereo/: stereoVision.cpp
